DFS implementado y funcional

--- a/Juegos_IAIA.ipynb
+++ b/Juegos_IAIA.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "8d963d98",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "c52adfb8",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "8914c9fa",
    "metadata": {
     "scrolled": true
@@ -273,7 +273,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "ef61975f",
    "metadata": {
     "scrolled": true
@@ -296,7 +296,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "d39458c6",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ef603de7",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f1f16530",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ec5362e8",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ab0a5e7f",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8c702fd2",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "78c429a0",
    "metadata": {
     "scrolled": true
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "e7a9a62b",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "cec45997",
    "metadata": {},
    "outputs": [],
@@ -619,13 +619,534 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### "
+    "---\n",
+    "---\n",
+    "## Laboratorio! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c922055e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "class TEstado:\n",
+    "    def __init__(self, estado, hs):\n",
+    "        self.estado = estado\n",
+    "        self.hs = hs\n",
+    "        self.sucesores = []\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        impresion = \"Estado: \" + str(self.estado) + \"\\nSucesores: [ \"\n",
+    "        for suc in self.sucesores:\n",
+    "            impresion = impresion + str(suc.estado) + \" \"\n",
+    "        impresion = impresion + \"]\"\n",
+    "        return impresion\n",
+    "\n",
+    "    def defSucesores(self, sucesores, caminos):\n",
+    "        self.sucesores = sucesores\n",
+    "        self.caminos = caminos\n",
+    "        \n",
+    "    def getEstado(self):\n",
+    "        return self.estado\n",
+    "    \n",
+    "    def getHs(self):\n",
+    "        return self.hs\n",
+    "        \n",
+    "s = TEstado(\"s\", 11)\n",
+    "a = TEstado(\"a\", 10.4)\n",
+    "b = TEstado(\"b\", 6.7)\n",
+    "c = TEstado(\"c\", 4.0)\n",
+    "d = TEstado(\"d\", 8.9)\n",
+    "e = TEstado(\"e\", 6.9)\n",
+    "f = TEstado(\"f\", 3.0)\n",
+    "g = TEstado(\"g\", 0.0)\n",
+    "\n",
+    "s.defSucesores([a, d], [3, 4])\n",
+    "a.defSucesores([s, d, b], [3, 5, 4])\n",
+    "b.defSucesores([a, e, c], [4, 5, 4])\n",
+    "c.defSucesores([b], [4])\n",
+    "d.defSucesores([e, a, s], [2, 5, 4])\n",
+    "e.defSucesores([d, b, f], [2, 5, 4])\n",
+    "f.defSucesores([g, e], [3, 4])\n",
+    "g.defSucesores([f], [3])\n",
+    "\n",
+    "    \n",
+    "def inicial():\n",
+    "    return s\n",
+    "\n",
+    "def sucesores(estado):\n",
+    "    return estado.sucesores\n",
+    "\n",
+    "def esExito(estado):\n",
+    "    return estado is g\n",
+    "\n",
+    "def avance(est1, est2):\n",
+    "    costo = None\n",
+    "    if (est2 in est1.sucesores):\n",
+    "        index = est1.sucesores.index(est2)\n",
+    "        costo = est1.caminos[index]        \n",
+    "    return costo\n",
+    "\n",
+    "def estimado(estado):\n",
+    "    return estado.hs\n",
+    "\n",
+    "def printEstadoT(estado):\n",
+    "    print(estado)\n",
+    "    \n",
+    "def printSucesores(sucesores):\n",
+    "    [print(str(x.estado)) for x in sucesores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7271b786",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado: s\n",
+      "Sucesores: [ a d ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "printEstadoT(inicial())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cff55d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "d\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "printSucesores(sucesores(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7e004396",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "e\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "printSucesores(sucesores(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d321f2c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esExito(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d4ec0d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esExito(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "48f43c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avance(e, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0f2dc31b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avance(e, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "03dfd064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "853d58bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.7"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2d04583f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e8878cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hillClimbing(estado):\n",
+    "    recorrido = [estado.getEstado()]\n",
+    "    try:\n",
+    "        while (not esExito(estado)):\n",
+    "            listaSucesores = sucesores(estado)\n",
+    "            costoEst = math.inf\n",
+    "            for i in range(len(listaSucesores)):\n",
+    "                if (listaSucesores[i].getEstado() not in recorrido):\n",
+    "                    valAComparar = listaSucesores[i].getHs()\n",
+    "                    if (costoEst > valAComparar):\n",
+    "                        menor = i\n",
+    "                        costoEst = valAComparar\n",
+    "                        \n",
+    "            estado = listaSucesores[menor]\n",
+    "            recorrido += estado.getEstado()\n",
+    "    except:\n",
+    "        recorrido = [\"Invalido\"]\n",
+    "    return recorrido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c7358bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 'd', 'e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8ca26065",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['g']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3231c9dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "49b76dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Invalido']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d0b8dad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hillClimbing2(estado):\n",
+    "    recorrido = [estado.getEstado()]\n",
+    "         \n",
+    "                    \n",
+    "    while (not esExito(estado)):\n",
+    "        verdaderoSucesores = []\n",
+    "        listaSucesores = sucesores(estado)\n",
+    "        for i in range(len(listaSucesores)):\n",
+    "            if not (not esExito(listaSucesores[i]) and len(sucesores(listaSucesores[i])) == 1):\n",
+    "                verdaderoSucesores += [listaSucesores[i]]\n",
+    "                \n",
+    "        listaSucesores = verdaderoSucesores\n",
+    "        costoEst = math.inf\n",
+    "        for i in range(len(listaSucesores)):\n",
+    "            if (listaSucesores[i].getEstado() not in recorrido):\n",
+    "                valAComparar = listaSucesores[i].getHs()\n",
+    "                if (costoEst > valAComparar):\n",
+    "                    menor = i\n",
+    "                    costoEst = valAComparar\n",
+    "\n",
+    "        estado = listaSucesores[menor]\n",
+    "        recorrido += estado.getEstado()\n",
+    "    return recorrido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e79458fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 'd', 'e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing2(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fdc94f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['g']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing2(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "56563e2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing2(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7810b168",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing2(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ead90d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'b', 'e', 'f', 'g']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing2(c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c922055e",
+   "id": "15e89e85",
    "metadata": {},
    "outputs": [],
    "source": []
